# cppcheatsheet

./: .gitignore  CITATION.cff  CMakeLists.txt  Dockerfile  Makefile  Procfile  README.rst  app.py  app_test.py  build.sh  requirements.txt
src/: CMakeLists.txt
src/algorithm/: CMakeLists.txt
src/algorithm/accumulate/: CMakeLists.txt  main.cc
src/algorithm/binary-search/: CMakeLists.txt  main.cc
src/algorithm/copy/: CMakeLists.txt  main.cc
src/algorithm/count/: CMakeLists.txt  main.cc
src/algorithm/erase-cpp20/: CMakeLists.txt  main.cc
src/algorithm/erase-map/: CMakeLists.txt  main.cc
src/algorithm/erase-remove/: CMakeLists.txt  main.cc
src/algorithm/find/: CMakeLists.txt  main.cc
src/algorithm/find-if/: CMakeLists.txt  main.cc
src/algorithm/for-each/: CMakeLists.txt  main.cc
src/algorithm/generate/: CMakeLists.txt  main.cc
src/algorithm/iota/: CMakeLists.txt  main.cc
src/algorithm/map-comparator/: CMakeLists.txt  main.cc
src/algorithm/map-object-key/: CMakeLists.txt  main.cc
src/algorithm/minmax/: CMakeLists.txt  main.cc
src/algorithm/nth-element/: CMakeLists.txt  main.cc
src/algorithm/partial-sort/: CMakeLists.txt  main.cc
src/algorithm/predicates/: CMakeLists.txt  main.cc
src/algorithm/reduce/: CMakeLists.txt  main.cc
src/algorithm/reverse-rotate/: CMakeLists.txt  main.cc
src/algorithm/set-operations/: CMakeLists.txt  main.cc
src/algorithm/sort/: CMakeLists.txt  main.cc
src/algorithm/stable-sort/: CMakeLists.txt  main.cc
src/algorithm/transform/: CMakeLists.txt  main.cc
src/algorithm/unique/: CMakeLists.txt  main.cc
src/asm/: CMakeLists.txt
src/asm/args/: CMakeLists.txt  args.s
src/asm/cpuid/: CMakeLists.txt  main.c
src/asm/exit/: CMakeLists.txt  exit32.s  exit64.s
src/asm/hello/: CMakeLists.txt  hello.s
src/asm/inline-asm/: CMakeLists.txt  main.c
src/asm/loop/: CMakeLists.txt  loop.s
src/asm/procedure/: CMakeLists.txt  procedure.s
src/asm/syscall-wrapper/: CMakeLists.txt  main.c
src/bash/: bash.sh  gpu.sh  hardware.sh  net.sh  os.sh
src/basic/: CMakeLists.txt
src/basic/addressof/: CMakeLists.txt  main.cc
src/basic/bit-manipulation/: CMakeLists.txt  main.cc
src/basic/c-linkage/: CMakeLists.txt  main.cc
src/basic/negative-array-index/: CMakeLists.txt  main.cc
src/basic/perfect-forwarding/: CMakeLists.txt  main.cc
src/basic/print/: CMakeLists.txt  main.cc
src/basic/reference-collapsing/: CMakeLists.txt  main.cc
src/basic/uniform-initialization/: CMakeLists.txt  main.cc
src/c/: CMakeLists.txt
src/c/alignas/: CMakeLists.txt  main.cc
src/c/anon-struct/: CMakeLists.txt  main.cc
src/c/arraysize/: CMakeLists.txt  main.cc
src/c/atomics/: CMakeLists.txt  main.cc
src/c/attribute/: CMakeLists.txt  main.cc
src/c/attributes/: CMakeLists.txt  main.cc
src/c/binary-const/: CMakeLists.txt  main.cc
src/c/builtins/: CMakeLists.txt  main.cc
src/c/callback/: CMakeLists.txt  main.cc
src/c/case-range/: CMakeLists.txt  main.cc
src/c/comma-operator/: CMakeLists.txt  main.cc
src/c/constexpr-c/: CMakeLists.txt  main.cc
src/c/ctor-dtor/: CMakeLists.txt  main.cc
src/c/duffs-device/: CMakeLists.txt  main.cc
src/c/endian-check/: CMakeLists.txt  main.cc
src/c/flex-array/: CMakeLists.txt  main.cc
src/c/generic/: CMakeLists.txt  main.cc
src/c/memory-alignment/: CMakeLists.txt  main.cc
src/c/nested-func/: CMakeLists.txt  main.cc
src/c/noreturn/: CMakeLists.txt  main.cc
src/c/nullptr-test/: CMakeLists.txt  main.cc
src/c/overflow-check/: CMakeLists.txt  main.cc
src/c/predefined-macros/: CMakeLists.txt  main.cc
src/c/split-string/: CMakeLists.txt  main.cc
src/c/static-assert/: CMakeLists.txt  main.cc
src/c/static-closure/: CMakeLists.txt  main.cc
src/c/stmt-expr/: CMakeLists.txt  main.cc
src/c/struct-alignment/: CMakeLists.txt  main.cc
src/c/typeof/: CMakeLists.txt  main.cc
src/c/typeof-gnu/: CMakeLists.txt  main.cc
src/c/variadic-macros/: CMakeLists.txt  main.cc
src/casting/: CMakeLists.txt
src/casting/c-style/: CMakeLists.txt  main.cc
src/casting/const-cast/: CMakeLists.txt  main.cc
src/casting/dynamic-cast/: CMakeLists.txt  main.cc
src/casting/reinterpret-cast/: CMakeLists.txt  main.cc
src/casting/static-cast/: CMakeLists.txt  main.cc
src/concepts/: CMakeLists.txt
src/concepts/defining/: CMakeLists.txt  main.cc
src/concepts/requires-expr/: CMakeLists.txt  main.cc
src/concepts/stdlib/: CMakeLists.txt  main.cc
src/concepts/subsumption/: CMakeLists.txt  main.cc
src/concepts/syntax/: CMakeLists.txt  main.cc
src/constexpr/: CMakeLists.txt
src/constexpr/consteval/: CMakeLists.txt  main.cc
src/constexpr/constexpr-function/: CMakeLists.txt  main.cc
src/constexpr/constexpr-if/: CMakeLists.txt  main.cc
src/constexpr/constexpr-variable/: CMakeLists.txt  main.cc
src/constexpr/constexpr-vs-tmp/: CMakeLists.txt  main.cc
src/constexpr/constinit/: CMakeLists.txt  main.cc
src/constexpr/if-consteval/: CMakeLists.txt  main.cc
src/container/: CMakeLists.txt
src/container/deque/: CMakeLists.txt  main.cc
src/container/list/: CMakeLists.txt  main.cc
src/container/map/: CMakeLists.txt  main.cc
src/container/priority-queue/: CMakeLists.txt  main.cc
src/container/profile/: CMakeLists.txt  main.cc
src/container/set/: CMakeLists.txt  main.cc
src/container/unordered-map/: CMakeLists.txt  main.cc
src/container/unordered-set/: CMakeLists.txt  main.cc
src/coroutine/: CMakeLists.txt
src/cpp/: CMakeLists.txt
src/cuda/: CMakeLists.txt
src/debug/: CMakeLists.txt
src/file/: CMakeLists.txt
src/ipc/: CMakeLists.txt
src/iterator/: CMakeLists.txt
src/lambda/: CMakeLists.txt
src/modules/: CMakeLists.txt
src/polymorphism/: CMakeLists.txt
src/process/: CMakeLists.txt
src/raii/: CMakeLists.txt
src/require/: CMakeLists.txt
src/rust/: Cargo.toml
src/rvo/: CMakeLists.txt
src/signal/: CMakeLists.txt
src/smartptr/: CMakeLists.txt
src/socket/: CMakeLists.txt
src/string/: CMakeLists.txt
src/template/: CMakeLists.txt
src/thread/: CMakeLists.txt
src/time/: CMakeLists.txt
src/type-erasure/: CMakeLists.txt
(+587 files in other folders)
