add_subdirectory(basic)
add_subdirectory(casting)
add_subdirectory(concepts)
add_subdirectory(constexpr)
add_subdirectory(lambda)
add_subdirectory(raii)
add_subdirectory(require)
add_subdirectory(rvo)
add_subdirectory(smartptr)
add_subdirectory(algorithm)
add_subdirectory(coroutine)
add_subdirectory(string)
add_subdirectory(container)
add_subdirectory(iterator)
add_subdirectory(template)
add_subdirectory(time)
add_subdirectory(socket)
add_subdirectory(file)
add_subdirectory(signal)
add_subdirectory(thread)
add_subdirectory(process)
add_subdirectory(ipc)
add_subdirectory(asm)
add_subdirectory(c)
add_subdirectory(cpp)
add_subdirectory(modules)

if(ENABLE_CUDA)
  add_subdirectory(cuda)
endif()
