add_subdirectory(sort)
add_subdirectory(stable-sort)
add_subdirectory(partial-sort)
add_subdirectory(nth-element)
add_subdirectory(find)
add_subdirectory(find-if)
add_subdirectory(binary-search)
add_subdirectory(count)
add_subdirectory(transform)
add_subdirectory(for-each)
add_subdirectory(accumulate)
add_subdirectory(reduce)
add_subdirectory(erase-remove)
add_subdirectory(erase-cpp20)
add_subdirectory(erase-map)
add_subdirectory(generate)
add_subdirectory(iota)
add_subdirectory(copy)
add_subdirectory(minmax)
add_subdirectory(predicates)
add_subdirectory(unique)
add_subdirectory(reverse-rotate)
add_subdirectory(set-operations)
add_subdirectory(map-comparator)
add_subdirectory(map-object-key)
