add_subdirectory(comma-operator)
add_subdirectory(static-closure)
add_subdirectory(endian-check)
add_subdirectory(split-string)
add_subdirectory(callback)
add_subdirectory(duffs-device)
add_subdirectory(static-assert)
add_subdirectory(generic)
add_subdirectory(anon-struct)
add_subdirectory(atomics)
add_subdirectory(alignas)
add_subdirectory(noreturn)
add_subdirectory(typeof)
add_subdirectory(nullptr-test)
add_subdirectory(constexpr-c)
add_subdirectory(attributes)
