add_subdirectory(syntax)
add_subdirectory(callable)
add_subdirectory(captureless)
add_subdirectory(init-capture)
add_subdirectory(generic)
add_subdirectory(template-lambda)
add_subdirectory(default-constructible)
add_subdirectory(unevaluated)
add_subdirectory(constexpr-lambda)
add_subdirectory(mutable)
add_subdirectory(iile)
add_subdirectory(callback)
add_subdirectory(recursive)
add_subdirectory(deducing-this)
add_subdirectory(pack-capture)
