add_subdirectory(constructors)
add_subdirectory(rule-of-zero)
add_subdirectory(rule-of-three)
add_subdirectory(rule-of-five)
add_subdirectory(move-leak)
add_subdirectory(move-exchange)
add_subdirectory(polymorphic)
add_subdirectory(initializer-list)
add_subdirectory(raii-wrapper)
add_subdirectory(value-categories)
add_subdirectory(move-only)
add_subdirectory(forwarding)
add_subdirectory(conditional-noexcept)
add_subdirectory(self-move)
add_subdirectory(moved-from-state)
add_subdirectory(move-pitfalls)
add_subdirectory(emplace)
