[workspace]
resolver = "2"
members = [
    "hello",
    "types",
    "variables",
    "control_flow",
    "pattern_matching",
    "borrowing",
    "ownership",
    "structs",
    "self_this",
    "raii",
    "strings",
    "casting",
    "const_fn",
    "enums",
    "error_handling",
    "generics",
    "iterators",
    "smart_pointers",
    "threads",
    "closures",
    "collections",
    "modules",
    "ffi",
    "lifetimes",
    "underscore",
    "proc_macros",
    "polymorphism",
]
