add_subdirectory(byteorder)
add_subdirectory(inet-conv)
add_subdirectory(getaddrinfo)
add_subdirectory(gethostbyname)
add_subdirectory(tcp-server)
add_subdirectory(udp-server)
add_subdirectory(select-server)
add_subdirectory(poll-server)
add_subdirectory(epoll-kqueue-server)
add_subdirectory(pthread-server)
add_subdirectory(unix-socket)
